<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.dev4u.hv.guia1_moviles.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <TextView
            android:layout_marginRight="5dp"
            android:textSize="26sp"
            android:gravity="end"
            android:text="@string/lblEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblEntrada"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_marginRight="5dp"
            android:textSize="22sp"
            android:id="@+id/lblResultado"
            android:gravity="end"
            android:text="@string/lblResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded" />


        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnAC"
                    android:text="@string/btnAC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn7"
                    android:text="@string/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn4" />

                <Button
                    android:id="@+id/btn1"
                    android:text="@string/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button

                    android:id="@+id/btnDEL"
                    android:text="@string/btnDEL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn8"
                    android:text="@string/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn5"
                    android:text="@string/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn2" />


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSUM"
                    android:text="@string/btnSUM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn9"
                    android:text="@string/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn6"
                    android:text="@string/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn3"
                    android:text="@string/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnRES"
                android:text="@string/btnRES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnMUL"
                    android:text="@string/btnMUL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnDIV"
                    android:text="@string/btnDIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnIGUAL"
                android:text="@string/btnIGUAL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn0"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/btn0" />
    </LinearLayout>



</RelativeLayout>
